[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mirrorhour"
version = "0.1.0"
description = "Utilities to detect and work with mirror hours (HH:HH) in local time or arbitrary timezones."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Tu Nombre", email = "tu@email"}]
keywords = ["time", "datetime", "mirror hour", "hora espejo"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tuusuario/mirrorhour"
Issues = "https://github.com/tuusuario/mirrorhour/issues"

[project.optional-dependencies]
cli = ["tzdata>=2024.1"]

[project.scripts]
mirrorhour = "mirrorhour.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mirrorhour"]
